--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "AGPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+django = "^3.0.4"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
