--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "AGPL-3.0-or-later"
 python = "^3.7"
 django = "^3.0.4"
 psycopg2-binary = "^2.8.4"
+djangorestframework = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
